--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,2 +1,3 @@
 index.courses.tagline=Online-Kurse für Spring Framework
 index.courses.headline=Spring Framework Guru Kurse
+button.buy.now=Jetzt kaufen
