Displaying Field Level Validation Message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,15 @@ index.page.title=Spring Framework Guru
 index.courses.tagline=Online Courses for Spring Framework
 index.courses.headline=Spring Framework Guru Courses
 checkoutCommand.hasErrors=Please correct errors below
+
+#Validaiton Messages
+#Order of precedence
+# 1 code.objectName.fieldName
+# 2 code.fieldName
+# 3 code.fieldType (Java data type)
+# 4 code
+
+
+NotEmpty.checkoutCommand.firstName=First Name is Required
+Size.checkoutCommand.firstName={0} must be between {2} and {1} characters long.
+checkoutCommand.firstName=First Name
