--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,16 @@ index.courses.tagline=Online Courses for Spring Framework
 index.courses.headline=Spring Framework Guru Courses
 checkoutCommand.hasErrors=Please correct errors below
 
+#Property Names
+checkoutCommand.firstName=First Name
+checkoutCommand.lastName=Last Name
+checkoutCommand.addressLine1=Address Line 1
+checkoutCommand.addressLine2=Address Line 2
+checkoutCommand.city=City
+checkoutCommand.stateCode=State
+checkoutCommand.zipCode=Zip Code
+
+
 #Validaiton Messages
 #Order of precedence
 # 1 code.objectName.fieldName
@@ -10,7 +20,20 @@ checkoutCommand.hasErrors=Please correct errors below
 # 3 code.fieldType (Java data type)
 # 4 code
 
-
-NotEmpty.checkoutCommand.firstName=First Name is Required
+NotEmpty.checkoutCommand.firstName={0} is Required
 Size.checkoutCommand.firstName={0} must be between {2} and {1} characters long.
-checkoutCommand.firstName=First Name
+
+NotEmpty.checkoutCommand.lastName={0} is Required
+Size.checkoutCommand.lastName={0} must be between {2} and {1} characters long.
+
+NotEmpty.checkoutCommand.addressLine1={0} is Required
+Size.checkoutCommand.addressLine1={0} must be between {2} and {1} characters long.
+
+NotEmpty.checkoutCommand.city={0} is Required
+Size.checkoutCommand.city={0} must be between {2} and {1} characters long.
+
+NotEmpty.checkoutCommand.stateCode={0} is Required
+Size.checkoutCommand.stateCode={0} must be between {2} and {1} characters long.
+
+NotEmpty.checkoutCommand.zipCode={0} is Required
+Size.checkoutCommand.zipCode={0} must be between {2} and {1} characters long.
